--- a/Proyecto_Ingenieria/src/vistas/tabla.fxml
+++ b/Proyecto_Ingenieria/src/vistas/tabla.fxml
@@ -4,6 +4,7 @@
 <?import com.jfoenix.controls.JFXComboBox?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -13,14 +14,8 @@
 <?import javafx.scene.text.Font?>
 
 <BorderPane fx:id="ventana" minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-image: url(recursos/fondovilla2.jpg);" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controladoras.ControladoraInicio">
-   <bottom>
-      <JFXButton fx:id="btnSalir" alignment="CENTER" buttonType="RAISED" maxWidth="1.7976931348623157E308" ripplerFill="#eb2f2f" text="Salir" textAlignment="CENTER" textFill="WHITE" BorderPane.alignment="CENTER">
-         <BorderPane.margin>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </BorderPane.margin></JFXButton>
-   </bottom>
    <center>
-      <GridPane alignment="CENTER" gridLinesVisible="true" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
+      <GridPane alignment="CENTER" gridLinesVisible="true" opacity="0.9" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="120.0" />
           <ColumnConstraints hgrow="SOMETIMES" />
@@ -30,7 +25,7 @@
           <ColumnConstraints hgrow="SOMETIMES" />
         </columnConstraints>
         <rowConstraints>
-            <RowConstraints vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="50.0" prefHeight="20.0" vgrow="SOMETIMES" />
             <RowConstraints vgrow="SOMETIMES" />
             <RowConstraints vgrow="SOMETIMES" />
           <RowConstraints vgrow="SOMETIMES" />
@@ -261,7 +256,12 @@
          <children>
             <AnchorPane prefHeight="200.0" prefWidth="200.0">
                <children>
-                  <JFXButton fx:id="btnProfesores" buttonType="RAISED" contentDisplay="CENTER" ripplerFill="#eb2f2f" text="Ver otros profesores" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                  <JFXComboBox fx:id="comboPersonal" focusColor="#f02929" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" promptText="Curso" unFocusColor="#b24646" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </JFXComboBox>
+                  <JFXButton fx:id="btnProfesores" buttonType="RAISED" contentDisplay="CENTER" ripplerFill="#eb2f2f" text="Ver otros profesores" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                </children>
                <GridPane.margin>
                   <Insets left="5.0" right="5.0" />
@@ -305,4 +305,17 @@
          </BorderPane.margin>
       </GridPane>
    </top>
+   <bottom>
+      <Button fx:id="btnSalir" mnemonicParsing="false" prefHeight="25.0" prefWidth="431.0" style="-fx-background-color: #d62222;" text="Salir" textAlignment="CENTER" BorderPane.alignment="CENTER">
+         <font>
+            <Font size="14.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+         <BorderPane.margin>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </BorderPane.margin>
+      </Button>
+   </bottom>
 </BorderPane>
